--- a/express/public/sandbox.html
+++ b/express/public/sandbox.html
@@ -19,5 +19,7 @@
       <button type="submit">Enviar</button>
   </form>
 
+  <footer><p>Utilizamos cookies para facilitar o armazenamento!</p></footer>
+
 </body>
 </html>
