--- a/express/public/register.html
+++ b/express/public/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/public/client.js"></script>
-    <title>Sandbox</title>
+    <title>Registre-se! Só Resto Nois</title>
 </head>
 <body>
 
