PARECE ESTAR FUNCIONANDO + PACKAGE.JSON QUE HAVIA ESQUECIDO
GAME LOOP CARREGA AS COISA -> FAZ ESCOLHA -> CARREGA AS COISAS FUNCIONANTE (APARENTEMENTE)
CONSTATADO QUE SE NÃO HOUVER AO MENOS UMA ESCOLHA, ACONTECE UMA CATASTROFE NA HORA DELE ATUALIZAR
USEM O PACKAGE.JSON PARA VERIFICAREM SE TEM OS MESMOS MODULOS QUE EU

--- a/express/public/game.html
+++ b/express/public/game.html
@@ -20,7 +20,10 @@
       <button id="choice3" choice-id=""></button>
       <button id="choice4" choice-id=""></button>
   
+    </div>
 
+    <div class="bulletsCounter">
+      <p>Número de balas:<span id="UserBullets"></span></p>
     </div>
 
     <script>
@@ -32,34 +35,31 @@
             const narration = document.querySelector('.narration');
             narration.innerHTML = `<h1>${text}</h1>`;
 
-          // Populate choice buttons
-          const choiceTextResponse = await fetch('/choiceText');
+            // Populate choice buttons
+            const choiceTextResponse = await fetch('/choiceText');
+            const choiceIdsResponse = await fetch('/choiceIds');
 
+            if (choiceTextResponse.ok && choiceIdsResponse.ok) {
+              const choiceTextData = await choiceTextResponse.json();
+              const choiceIdsData = await choiceIdsResponse.json();
+              const choiceText = choiceTextData.choiceText;
+              const choiceIds = choiceIdsData.choicesId;
+              const choiceButtons = document.querySelectorAll('.choicesContainer button');
 
-          choiceIdsResponse = await fetch('/choiceIds');
-          const choiceIdsData = await choiceIdsResponse.json();
-          const choiceIds = choiceIdsData.choicesId;
-          console.log(choiceIds);
+              for (let i = 0; i < choiceText.length && i < choiceButtons.length; i++) {
+                choiceButtons[i].textContent = choiceText[i];
+                choiceButtons[i].setAttribute('choice-id', choiceIds[i]);
+                choiceButtons[i].addEventListener('click', function() {
+                  sendChoice(choiceButtons[i].getAttribute('choice-id'));
+                });
+              }
 
-          if (choiceTextResponse.ok) {
-            const choiceTextData = await choiceTextResponse.json();
-            const choiceText = choiceTextData.choiceText;
-            const choiceButtons = document.querySelectorAll('.choicesContainer button');
-            for (let i = 0; i < choiceButtons.length && i < choiceButtons.length; i++) {
-              choiceButtons[i].textContent = choiceText[i];
-              choiceButtons[i].setAttribute('choice-id', choiceIds[i]);
-              choiceButtons[i].addEventListener('click', function() {
-                sendChoice(choiceButtons[i].getAttribute('choice-id'));
-              });
-            }
-
-              
-            // Hide any unused buttons
-            for (let i = choiceText.length; i < choiceButtons.length; i++) {
-              choiceButtons[i].style.display = 'none';
-            }
+              // Hide any unused buttons
+              for (let i = choiceText.length; i < choiceButtons.length; i++) {
+                choiceButtons[i].style.display = 'none';
+              }
             } else {
-              console.error(`Failed to fetch choice text: ${choiceTextResponse.status} ${choiceTextResponse.statusText}`);
+              console.error(`Failed to fetch choice text or choice IDs.`);
             }
           } else {
             console.error(`Failed to fetch text: ${response.status} ${response.statusText}`);
@@ -70,17 +70,64 @@
           console.log("Escolha selecionada abaixo:")
           console.log(choiceId);
 
-        const response = await fetch('/makeChoice', {
+          const response = await fetch('/makeChoice', {
             method: 'POST',
             headers: {
-                'Content-Type': 'application/json'
+              'Content-Type': 'application/json'
             },
             body: JSON.stringify({ choiceId })
-        });
-        if (!response.ok) {
+          });
+
+          if (!response.ok) {
             console.error(`Failed to send choice: ${response.status} ${response.statusText}`);
-        } 
-    }
+          }
+
+          const narrationResponse = await fetch('/text');
+          const choiceTextResponse = await fetch('/choiceText');
+          const choiceIdsResponse = await fetch('/choiceIds');
+
+          if (narrationResponse.ok && choiceTextResponse.ok && choiceIdsResponse.ok) {
+            const narrationData = await narrationResponse.json();
+            const choiceTextData = await choiceTextResponse.json();
+            const choiceIdsData = await choiceIdsResponse.json();
+
+            const text = narrationData.text;
+            const narration = document.querySelector('.narration');
+            narration.innerHTML = `<h1>${text}</h1>`;
+
+            const choiceText = choiceTextData.choiceText;
+            const choiceIds = choiceIdsData.choicesId;
+            const choiceButtons = document.querySelectorAll('.choicesContainer button');
+
+            for (let i = 0; i < choiceText.length && i < choiceButtons.length; i++) {
+              choiceButtons[i].textContent = choiceText[i];
+              choiceButtons[i].setAttribute('choice-id', choiceIds[i]);
+            }
+
+            for (let i = choiceText.length; i < choiceButtons.length; i++) {
+              choiceButtons[i].style.display = 'none';
+            }
+          } else {
+            console.error(`Failed to fetch narration text or choice data.`);
+          }
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+          fetch('/consultaBullets')
+            .then(function(response) {
+              if (!response.ok) {
+                throw new Error('Ocorreu um erro ao consultar o banco de dados.');
+              }
+              return response.json();
+            })
+            .then(function(data) {
+              var atributo = parseInt(data.currentBullets); // O valor retornado é uma string
+              document.getElementById('UserBullets').textContent = atributo; // Atualiza o conteúdo do elemento com o atributo
+            })
+            .catch(function(error) {
+              console.error(error);
+            });
+        });
     </script>
 
 </body>
