TRACK DE BULLETS
Balas estão sendo trackeadas - Não tem como dar alert e as rotas não deram a mínima pro return e continuam fazendo suas ações sem respeito ao próximo.

--- a/express/public/game.html
+++ b/express/public/game.html
@@ -64,6 +64,7 @@
           } else {
             console.error(`Failed to fetch text: ${response.status} ${response.statusText}`);
           }
+          updateBullets();
         });
 
         async function sendChoice(choiceId) {
@@ -110,9 +111,10 @@
           } else {
             console.error(`Failed to fetch narration text or choice data.`);
           }
+          updateBullets();
         }
 
-        document.addEventListener('DOMContentLoaded', function() {
+        function updateBullets() {
           fetch('/consultaBullets')
             .then(function(response) {
               if (!response.ok) {
@@ -127,7 +129,7 @@
             .catch(function(error) {
               console.error(error);
             });
-        });
+        };
     </script>
 
 </body>
