Janelas para o registro & um pouco de css

--- a/express/public/register.html
+++ b/express/public/register.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/public/client.js"></script>
     <title>Registre-se! Só Resto Nois</title>
+    <link href="style_register.css" type="text/css" rel="stylesheet"> 
 </head>
 <body>
-
+  
     <h1>Cadastro de usuário</h1>
 
     <form action="/register" method="POST"> 
