--- a/express/public/game.html
+++ b/express/public/game.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Só Resto Nois</title>
+    <link href="style_game.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
