--- a/express/public/register.html
+++ b/express/public/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/public/client.js"></script>
     <title>Registre-se! Só Resto Nois</title>
-    <link href="style_register.css" type="text/css" rel="stylesheet"> 
+    <link href="style.css" type="text/css" rel="stylesheet"> 
 </head>
 <body>
   
