--- a/express/public/game.html
+++ b/express/public/game.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/game.css">
     <title>Só Resto Nois</title>
@@ -27,16 +31,16 @@
         
           </div>
         </section>
-  
-        <section class="GameInformation">
-          <div class="bulletsCounter">
-            <p>Número de balas: <span id="UserBullets"></span></p>
-          </div>
-          <div class="healthCounter">
-            <p>Saúde: <span id="UserHealth"></span></p>
-          </div>
-        </section>
       </div>
+      <section class="GameInformation">
+        <div class="bulletsCounter">
+          <p>Número de balas: <span id="UserBullets"></span></p>
+        </div>
+        <div class="healthCounter">
+          <p>Saúde: <span id="UserHealth"></span></p>
+        </div>
+      </section>
+  
     </main>
 
 
