--- a/express/public/register.html
+++ b/express/public/register.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Styles/register.css">
 
     <script src="/public/client.js"></script>
+    <link rel="stylesheet" href="/public/Styles/register.css">
     <title>Registre-se! Só Resto Nois</title>
 </head>
 <body>
