Botão de voltar ao menu
Adição de botão que permite ao jogador voltar ao menu principal quando quiser

--- a/express/public/game.html
+++ b/express/public/game.html
@@ -20,7 +20,8 @@
           
           </div>
         </section>
-  
+
+    
         <section class="GameChoices">
           <div class="choicesContainer">
   <!-- choice-id recebe a Id da escolha atrelada a ele, em tempo de execução -->
@@ -38,6 +39,9 @@
         </div>
         <div class="healthCounter">
           <p>Saúde: <span id="UserHealth"></span></p>
+        </div>
+        <div>
+          <a href="/"><button id="voltar">Voltar ao Menu</button></a>
         </div>
       </section>
   
